--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 	/* Defining each section background and styles
 	* --------------------------------------- */
 	#section0{
-		background-image: url(imgs/bg1.jpg);
+		background-image: url(examples/imgs/bg1.jpg);
 		padding: 30% 0 0 0;
 	}
 	#section2{
-		background-image: url(imgs/bg3.jpg);
+		background-image: url(examples/imgs/bg3.jpg);
 		padding: 6% 0 0 0;
 	}
 	#section3{
-		background-image: url(imgs/bg4.jpg);
+		background-image: url(examples/imgs/bg4.jpg);
 		padding: 6% 0 0 0;
 	}
 	#section3 h1{
@@ -62,11 +62,11 @@
  	/*Adding background for the slides
 	* --------------------------------------- */
 	#slide1{
-		background-image: url(imgs/bg2.jpg);
+		background-image: url(examples/imgs/bg2.jpg);
 		padding: 6% 0 0 0;
 	}
 	#slide2{
-		background-image: url(imgs/bg5.jpg);
+		background-image: url(examples/imgs/bg5.jpg);
 		padding: 6% 0 0 0;
 	}
 
