--- a/index.html
+++ b/index.html
@@ -109,13 +109,39 @@
 -->
 
 <div id="fullpage">
-	<div class="section " id="section0"><h1>fullPage.js</h1></div>
+
+
+
+	<div class="section " id="section0"><h1>fullPage.js</h1>
+	
+	
+	
+	</div>
+	
+	<div class="section " id="section0">
+	<a href="http://www.songkick.com/artists/8602589" class="songkick-widget" data-theme="dark" data-other-artists="on" data-detect-style="true" data-font-color="#fff" data-background-color="transparent">Upcoming Shows</a>
+<script src="//widget.songkick.com/widget.js"></script>
+	
+	
+	</div>
+	
+	
 	<div class="section" id="section1">
 	    <div class="slide" id="slide1"><h1>Slide Backgrounds</h1></div>
 	    <div class="slide" id="slide2"><h1>Totally customizable</h1></div>
 	</div>
+	
+	
+	
 	<div class="section" id="section2"><h1>Lovely images <br />for a lovely page</h1></div>
+	
+	
 	<div class="section" id="section3"><h1>One Image = One thousand words</h1></div>
+	
+	
+	
+	
+	
 </div>
 
 </body>
