--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
 	
 	</div>
 	
-	<div class="section" id="section1"><a href="http://www.songkick.com/artists/8602589" class="songkick-widget" data-theme="dark" data-other-artists="on" data-detect-style="true" data-font-color="#fff" data-background-color="transparent">Upcoming Shows</a>
-<script src="//widget.songkick.com/widget.js"></script>
+	<div class="section " id="section1"><h1>Upcoming Shows</h1>
+	<a href="http://www.songkick.com/artists/8602589" class="songkick-widget" data-theme="dark" data-other-artists="on" data-detect-style="true" data-font-color="#fff" data-background-color="transparent">Upcoming Shows</a>
+	<script src="//widget.songkick.com/widget.js"></script>
 	
 	
 	</div>
