--- a/domain.html
+++ b/domain.html
@@ -1,1 +1,15 @@
+<style>
+
+body{
+  
+  padding:10px;
+  font-size: 20;
+}
+</style>
+
+
+<body>
+
 <strong>email davepartmandave@gmail.com for any inquiries</strong>
+
+</body>
