--- a/domain.html
+++ b/domain.html
@@ -3,7 +3,8 @@
 body{
   
   padding:10px;
-  font: 20, sans-serif;
+  font: 40;
+  font-family:Helvetica, sans-serif;
   text-align: center;
 }
 </style>
